// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset renders children and legend 1`] = `
<DocumentFragment>
  <fieldset
    class="className"
    name="fieldset"
    tabindex="0"
  >
    <legend>
      legend
    </legend>
    <label>
      Name:
    </label>
    <input
      id="employee_name"
      name="employee_name"
      type="text"
    />
  </fieldset>
</DocumentFragment>
`;

exports[`Fieldset renders only children when no legend is passed 1`] = `
<DocumentFragment>
  <fieldset
    class="className"
    name="fieldset"
    tabindex="0"
  >
    <label>
      Name:
    </label>
    <input
      id="employee_name"
      name="employee_name"
      type="text"
    />
  </fieldset>
</DocumentFragment>
`;
